# nile-coverage

./: .coveragerc  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  LICENSE.txt  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
src/nile_coverage/: __init__.py  commands.py  common.py  coverage.py  plugin.py  plugins.py  skeleton.py  utils.py
src/nile_coverage/pytest_plugins/: coverage.py
src/nile_coverage/xdist/: remote.py  worker.py
tests/: conftest.py  test_coverage.py  test_skeleton.py
