[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[project]
name = "nile-coverage"
version = "0.2.0"
description =  "Nile plugin adding coverage reports for Cairo Smart Contracts."
readme = "README.md"
dependencies = [
  "click >= 8.1.3",
  "pytest >= 7.1.3",
  "asynctest >= 0.13.0",
  "cairo-lang >= 0.10.1",
  "importlib-metadata >= 4.0",
  "pycobertura >= 3.0.0"
]

# We need to specify that click commands are entrypoints of type `nile_plugins`
[project.entry-points."nile_plugins"]
"coverage" = "nile_coverage.commands.coverage"
